# edtools

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENCE  MANIFEST.in  README.md  autoindex.py  citation.CFF  cluster.py  data.yaml  extract_xds_info.py  find_cell.py  make_shelx.py  make_xscale.py  pyproject.toml  readme.md  requirements.txt  run_pointless.py  setup.py  spglib.yaml  update_xds.py  utils.py
.github/workflows/: test.yml
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/demo_example/: edtools_demo.ipynb
docs/examples/: edtools_demo.ipynb
edtools/: atomlib.yaml  autoindex.py  cif_tools.py  cluster.py  extract_xds_info.py  find_beam_center.py  find_cell.py  find_rotation_axis.py  group_reflections.py  make_shelx.py  make_xscale.py  period_table.py  reflection_tool.py  run_pointless.py  scattering_factor.py  update_xds.py  utils.py  widgets.py  wsl.py
edtools/instrument/: Lab6.cif  Themis-Z.cif
scedtools/: autoindex.py  cluster.py  extract_xds_info.py  find_cell.py  make_shelx.py  make_xscale.py  update_xds.py  utils.py
