[tool]
[tool.poetry]
name = "edtools"
version = "1.0.0"
description = "Collection of tools for automated processing and clustering of electron diffraction data."
keywords = [
	"electron-diffraction",
	"microed",
	"xds",
	"pipeline",
	"cluster-analysis",
]
classifiers = [
	"Development Status :: 5 - Stable",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
]
homepage = "http://github.com/stefsmeets/edtools"
repository = "http://github.com/stefsmeets/edtools"
documentation = "http://github.com/stefsmeets/edtools"
maintainers = ["Stef Smeets <s.smeets@tudelft.nl>"]
authors = ["Stef Smeets <s.smeets@tudelft.nl>"]
readme = "README.md"
license = "GPL-3.0-only"
include = [
    ".pre-commit.yaml",
    "LICENCE",
    "setup.py",
]

[tool.poetry.dependencies]
python = ">=3.6.1"
numpy = "^1.18.2"
matplotlib = "^3.2.1"
scipy = "^1.4.1"
pandas = "^1.0.3"
uncertainties = "^3.1.2"

[tool.poetry.dev-dependencies]
check-manifest = "*"
pre-commit = "*"

[tool.poetry.scripts]
"edtools.autoindex"           = "edtools.autoindex:main"
"edtools.cluster"             = "edtools.cluster:main"
"edtools.find_cell"           = "edtools.find_cell:main"
"edtools.extract_xds_info"    = "edtools.extract_xds_info:main"
"edtools.run_pointless"       = "edtools.run_pointless:main"
"edtools.make_xscale"         = "edtools.make_xscale:main"
"edtools.make_shelx"          = "edtools.make_shelx:main"
"edtools.update_xds"          = "edtools.update_xds:main"
"edtools.find_rotation_axis"  = "edtools.find_rotation_axis:main"

[tool.poetry.urls]
"Bug Reports" = "https://github.com/stefsmeets/edtools/issues"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
versioning = "semver"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
