[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "edtools"
version = "1.1.0"
description = "Collection of tools for automated processing and clustering of electron diffraction data."
readme = "readme.md"
requires-python = ">=3.8"
authors = [
    {name = "Stef Smeets", email="s.smeets@esciencecenter.nl"}
]
keywords = [
	"electron-diffraction",
	"microed",
	"xds",
	"pipeline",
	"cluster-analysis",
]
license = "BSD-3-clause"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Science/Research",
	"Natural Language :: English",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.18.2",
    "matplotlib>=3.2.1",
    "scipy>=1.4.1",
    "pandas>=1.0.3",
    "uncertainties>=3.1.2",
    "PyYAML>=5.4.1",
    "openpyxl>=3.0.10",
]

[project.urls]
homepage = "http://github.com/instamatic-dev/edtools"
issues = "http://github.com/instamatic-dev/edtools/issues"
documentation = "http://github.com/instamatic-dev/edtools"
changelog = "http://github.com/instamatic-dev/edtools/releases"

[project.optional-dependencies]
develop = [
    "check-manifest",
    "pre-commit",
    "bump-my-version",
]
publish = [
    "twine",
    "wheel",
    "build",
]

[project.scripts]
"edtools.autoindex"           = "edtools.autoindex:main"
"edtools.cluster"             = "edtools.cluster:main"
"edtools.find_cell"           = "edtools.find_cell:main"
"edtools.extract_xds_info"    = "edtools.extract_xds_info:main"
"edtools.run_pointless"       = "edtools.run_pointless:main"
"edtools.make_xscale"         = "edtools.make_xscale:main"
"edtools.make_shelx"          = "edtools.make_shelx:main"
"edtools.update_xds"          = "edtools.update_xds:main"
"edtools.find_rotation_axis"  = "edtools.find_rotation_axis:main"
"edtools.find_beam_center"  = "edtools.find_beam_center:main"

[tool.bumpversion]
current_version = "1.1.0"

[[tool.bumpversion.files]]
filename = "edtools/__init__.py"
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = "version: {current_version}"
replace = "version: {new_version}"

[[tool.bumpversion.files]]
filename = "docs/conf.py"
search = "version = release = '{current_version}'"
replace = "version = release = '{new_version}'"
